--- a/troubleshooting/03.netfilterqueue_troubleshooting/03.netfilterqueue_troubleshooting.md
+++ b/troubleshooting/03.netfilterqueue_troubleshooting/03.netfilterqueue_troubleshooting.md
@@ -1,4 +1,4 @@
-# 02: Troubleshooting "netfilterqueue failed to install"
+# 03: Troubleshooting "netfilterqueue failed to install"
 
 ## Error:
 ```shell
@@ -22,7 +22,21 @@ dosa@dosa:~$ cd NetfilterQueue-0.3/
 
 dosa@dosa:~$ sudo apt-get install build-essential python2-dev libnetfilter-queue-dev
 
-dosa@dosa:~NetfilterQueue-0.3$ sudo python3 setup.py install
+dosa@dosa:~NetfilterQueue-0.3$ sudo python2 setup.py install
 ```
+
+### Fixing scapy error
+```shell
+dosa@dosa:~/dnsspoof_package/dnspoof$ sudo apt-get install python3-pip
+
+dosa@dosa:~/dnsspoof_package/dnspoof$ wget https://bootstrap.pypa.io/pip/2.7/get-pip.py
+
+dosa@dosa:~/dnsspoof_package/dnspoof$ sudo python2 get-pip.py
+
+dosa@dosa:~/dnsspoof_package/dnspoof$ sudo pip2 install scapy
+
+
+```
+
 
 ### Solved !
