--- a/troubleshooting/04.unmet_build_dependencies_troubleshooting/04.unmet_build_dependencies_troubleshooting.md
+++ b/troubleshooting/04.unmet_build_dependencies_troubleshooting/04.unmet_build_dependencies_troubleshooting.md
@@ -28,3 +28,6 @@ dosa@dosa:~/dnspoof-1.0.0/deb_dist$ dnspoof
 usage: dnspoof [-h] [-rw REAL_WEB] [-fw FAKE_WEB] [-qm QUEUE_NUM]
 dnspoof: error: [-] Please specify url of the real website to spoof, use --help for more info.
 ```
+
+
+## Solved !
