Netfilterqueue troubleshooting cloning link issue

--- a/troubleshooting/03.netfilterqueue_troubleshooting/03.netfilterqueue_troubleshooting.md
+++ b/troubleshooting/03.netfilterqueue_troubleshooting/03.netfilterqueue_troubleshooting.md
@@ -14,15 +14,13 @@ Building wheels for collected packages: netfilterqueue
 
 ## Fix:
 ```shell
-dosa@dosa:~$ wget http://pypi.python.org/packages/source/N/NetfilterQueue/NetfilterQueue-0.3.tar.gz
+dosa@dosa:~$ git clone https://github.com/kti/python-netfilterqueue.git
 
-dosa@dosa:~$ tar -xvzf NetfilterQueue-0.3.tar.gz
-
-dosa@dosa:~$ cd NetfilterQueue-0.3/
+dosa@dosa:~$ cd python-netfilterqueue/
 
 dosa@dosa:~$ sudo apt-get install build-essential python2-dev libnetfilter-queue-dev
 
-dosa@dosa:~NetfilterQueue-0.3$ sudo python2 setup.py install
+dosa@dosa:~python-netfilterqueue-0.3$ sudo python2 setup.py install
 ```
 
 ### Fixing scapy error
