Netfilterqueue troubleshooting cloning link issue

--- a/troubleshooting/03.netfilterqueue_troubleshooting/03.netfilterqueue_troubleshooting.md
+++ b/troubleshooting/03.netfilterqueue_troubleshooting/03.netfilterqueue_troubleshooting.md
@@ -20,7 +20,7 @@ dosa@dosa:~$ cd python-netfilterqueue/
 
 dosa@dosa:~$ sudo apt-get install build-essential python2-dev libnetfilter-queue-dev
 
-dosa@dosa:~python-netfilterqueue-0.3$ sudo python2 setup.py install
+dosa@dosa:~python-netfilterqueue$ sudo python2 setup.py install
 ```
 
 ### Fixing scapy error
